# obdsvc

./: README.md  pyproject.toml
src/obdsvc/: automobile.py  console.py  redispub.py
