[tool.poetry]
name = "obdsvc"
version = "0.1.0"
description = "A service to relay OBD2 info onto a seperate application message bus."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jwilliamsnephos/obdsvc"
repository = "https://github.com/jwilliamsnephos/obdsvc"
keywords = ["OBDII", "OBD2"]
authors = ["Joshua Williams <joshua.p.williams@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
obd = "^0.7.1"
redis = "^4.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
obdsvc = "obdsvc.console:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

